--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -26,6 +26,10 @@
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>monitoring.core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>discovery.core</artifactId>
+		</dependency>
 
 
 		<dependency>
@@ -36,6 +40,24 @@
 		<dependency>
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-http</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-jaxws</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 
 		<dependency>
@@ -63,7 +85,7 @@
 			<groupId>commons-discovery</groupId>
 			<artifactId>commons-discovery</artifactId>
 		</dependency>
-		
+
 		<!-- Jetty -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
@@ -112,13 +134,13 @@
 			<artifactId>jsr311-api</artifactId>
 			<version>1.1-ea</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.2.3</version>
 		</dependency>
-            
+
 
 
 	</dependencies>
