Added interface to add rules to ws

--- a/invocation/core/src/main/resources/default.properties
+++ b/invocation/core/src/main/resources/default.properties
@@ -12,3 +12,10 @@ monitoring.endpoint.namespace = ${monitoring.endpoint.namespace}
 monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
 monitoring.triplestore.reposid = ${default.sesame.test.repository.name}
 monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
+
+############################
+# Ranking Information
+###########################
+ranking.triplestore.endpoint = ${ranking.triplestore.endpoint}
+ranking.triplestore.reposid = ${ranking.triplestore.reposid}
+ranking.instance.prefixuri = ${ranking.instance.prefixuri}
