--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,11 @@
 				<version>${axis2.version}</version>
 			</dependency>
 			<dependency>
+			    <groupId>org.apache.ws.xmlschema</groupId>
+			    <artifactId>xmlschema-core</artifactId>
+			    <version>2.0.3</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.ws.commons.axiom</groupId>
 				<artifactId>axiom-api</artifactId>
 				<version>1.2.14</version>
