--- a/registration/webservice/pom.xml
+++ b/registration/webservice/pom.xml
@@ -16,7 +16,6 @@
 			<plugin>
 				<groupId>org.jvnet.jax-ws-commons</groupId>
 				<artifactId>jaxws-maven-plugin </artifactId>
-				<version>2.2</version>
 				<executions>
 					<execution>
 						<id>Create WSDL</id>
@@ -61,7 +60,8 @@
 		</resources>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
