--- a/pom.xml
+++ b/pom.xml
@@ -518,6 +518,11 @@
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<version>1.7</version>
 			</dependency>
+			<dependency>
+				<groupId>com.sun.xml.ws</groupId>
+				<artifactId>jaxws-rt</artifactId>
+				<version>2.1.4</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<ciManagement>
