--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -11,41 +11,61 @@
 		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
+	<build>
+		<plugins>
+			<plugin>
+				<!-- Generate WSDL files from annotations in the implementation -->
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-java2ws-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>install</id>
+						<phase>install</phase>
+						<configuration>
+							<className>at.sti2.msee.discovery.api.webservice.Discovery</className>
+							<outputFile>${project.build.directory}/../src/main/resources/DiscoveryService.wsdl</outputFile>
+							<genWsdl>true</genWsdl>
 
-	<repositories>
-		<repository>
-			<id>axis2m</id>
-			<name>Axis2m Repository</name>
-			<url>http://axis2m.sourceforge.net/repo/</url>
-		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>axis2m</id>
-			<name>Axis2m Repository</name>
-			<url>http://axis2m.sourceforge.net/repo/</url>
-		</pluginRepository>
-	</pluginRepositories>
-
-
+							<!-- <genClient>true</genClient> -->
+							<verbose>false</verbose>
+						</configuration>
+						<goals>
+							<goal>java2ws</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>discovery.api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>discovery.core</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ws.commons.schema</groupId>
+					<artifactId>XmlSchema</artifactId>
+        		</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>registration.core</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ws.commons.schema</groupId>
+					<artifactId>XmlSchema</artifactId>
+        		</exclusion>
+			</exclusions>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
 		</dependency>
 
 		<dependency>
@@ -67,22 +87,28 @@
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-transport-http</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-transport-local</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.axis2</groupId>
-			<artifactId>axis2-jaxws</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.axis2</groupId> -->
+<!-- 			<artifactId>axis2</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.axis2</groupId> -->
+<!-- 			<artifactId>axis2-transport-http</artifactId> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.apache.ws.commons.schema</groupId> -->
+<!-- 					<artifactId>XmlSchema</artifactId> -->
+<!--         		</exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.axis2</groupId> -->
+<!-- 			<artifactId>axis2-transport-local</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.axis2</groupId> -->
+<!-- 			<artifactId>axis2-jaxws</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.apache.ws.commons.axiom</groupId>
 			<artifactId>axiom-api</artifactId>
@@ -176,272 +202,33 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-bundle</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.ws.xmlschema</groupId>
+		    <artifactId>xmlschema-core</artifactId>
+		</dependency>
+		<!-- Even though this is dependency of cxf it must be added explicitly 
+			for jetty (maven problem) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
 	</dependencies>
 
-	<!-- <build> <plugins> <plugin> <groupId>org.apache.axis2</groupId> <artifactId>axis2-wsdl2code-maven-plugin</artifactId> 
-		<version>1.4</version> <executions> <execution> <goals> <goal>wsdl2code</goal> 
-		</goals> <configuration> <packageName>at.sti2.msee.discovery.core</packageName> 
-		<wsdlFile>http://sesa.sti2.at:8080/discovery-webservice/services/discovery?wsdl</wsdlFile> 
-		<databindingName>xmlbeans</databindingName> </configuration> </execution> 
-		</executions> </plugin> </plugins> </build> -->
-
-
-	<build>
-		<plugins>
-
-			<!-- uncommented for wsdl creating - and uncomment the other plugins -->
-			<plugin>
-				<groupId>org.apache.axis2</groupId>
-				<artifactId>axis2-java2wsdl-maven-plugin</artifactId>
-				<version>1.5.4</version>
-				<executions>
-					<execution>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>java2wsdl</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<className>at.sti2.msee.discovery.webservice.WebServiceDiscoveryImpl</className>
-					<outputFileName>${basedir}/src/main/webapp/discovery.wsdl</outputFileName>
-					<wsdlVersion>2</wsdlVersion>
-				</configuration>
-			</plugin>
-
-
-			<plugin>
-				<groupId>org.apache.axis2</groupId>
-				<artifactId>axis2-wsdl2code-maven-plugin</artifactId>
-				<version>1.5.4</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>wsdl2code</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<classpathElements>${project.build.outputDirectory}</classpathElements>
-					<wsdlFile>${basedir}/src/main/webapp/discovery.wsdl</wsdlFile>
-					<wsdlVersion>2</wsdlVersion>
-					<databindingName>xmlbeans</databindingName>
-					<packageName>at.sti2.msee.discovery.webservice</packageName>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${project.build.directory}/axis2/wsdl2code/src</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.axis2
-										</groupId>
-										<artifactId>
-											axis2-wsdl2code-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.5.4,)
-										</versionRange>
-										<goals>
-											<goal>wsdl2code</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.axis2
-										</groupId>
-										<artifactId>
-											axis2-java2wsdl-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.5.4,)
-										</versionRange>
-										<goals>
-											<goal>java2wsdl</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-
-
-
-	<!-- <build> -->
-	<!-- <finalName>discovery-webservice</finalName> -->
-	<!-- <plugins> -->
-	<!-- <plugin> -->
-
-	<!-- Maven compiler plugin -->
-	<!-- <artifactId>maven-compiler-plugin</artifactId> -->
-	<!-- <configuration> -->
-	<!-- <source>1.7</source> -->
-	<!-- <target>1.7</target> -->
-	<!-- <optimize>true</optimize> -->
-	<!-- </configuration> -->
-	<!-- </plugin> -->
-
-
-	<!-- <plugin> -->
-	<!-- <groupId>org.mortbay.jetty</groupId> -->
-	<!-- <artifactId>maven-jetty-plugin</artifactId> -->
-	<!-- <version>6.1.26</version> -->
-	<!-- <configuration> -->
-	<!-- <webAppConfig> -->
-	<!-- <contextPath>/</contextPath> -->
-	<!-- </webAppConfig> -->
-	<!-- </configuration> -->
-	<!-- </plugin> -->
-
-
-	<!-- <plugin> -->
-	<!-- <groupId>org.axis2m</groupId> -->
-	<!-- <artifactId>axis2m-plugins</artifactId> -->
-	<!-- <version>1.0M2</version> -->
-
-
-	<!-- <configuration> <wsdlFile>http://localhost:8080/services/SimpleService?wsdl</wsdlFile> 
-		</configuration> -->
-
-	<!-- </plugin> -->
-
-
-	<!-- <plugin> -->
-	<!-- <groupId>org.apache.axis2</groupId> -->
-	<!-- <artifactId>axis2-aar-maven-plugin</artifactId> -->
-	<!-- <version>1.4.1</version> -->
-	<!-- <configuration> -->
-	<!-- <servicesXmlFile> -->
-	<!-- src/main/webapp/WEB-INF/services/DiscoveryImpl/META-INF/services.xml</servicesXmlFile> -->
-	<!-- </configuration> -->
-
-	<!-- </plugin> -->
-
-	<!-- </plugins> -->
-	<!-- </build> -->
-
-	<!-- <build> -->
-	<!-- <plugins> -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.apache.axis2</groupId> -->
-	<!-- <artifactId>axis2-java2wsdl-maven-plugin</artifactId> -->
-	<!-- <version>1.6.2</version> -->
-	<!-- <executions> -->
-	<!-- <execution> -->
-	<!-- <phase>process-classes</phase> -->
-	<!-- <goals> -->
-	<!-- <goal>java2wsdl</goal> -->
-	<!-- </goals> -->
-	<!-- </execution> -->
-	<!-- </executions> -->
-	<!-- <configuration> -->
-	<!-- <className>at.sti2.msee.discovery.webservice.DiscoveryImpl</className> -->
-	<!-- <outputFileName>${project.build.directory}/discovery.wsdl</outputFileName> -->
-	<!-- <wsdlVersion>2.0</wsdlVersion> -->
-	<!-- </configuration> -->
-	<!-- </plugin> -->
-	<!-- </plugins> -->
-	<!-- </build> -->
-
-	<!-- <build> -->
-	<!-- <plugins> -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.jvnet.jax-ws-commons</groupId> -->
-	<!-- <artifactId>jaxws-maven-plugin</artifactId> -->
-	<!-- <version>2.1</version> -->
-	<!-- <executions> -->
-	<!-- <execution> -->
-	<!-- <phase>process-classes</phase> -->
-	<!-- <goals> -->
-	<!-- <goal>wsgen</goal> -->
-	<!-- </goals> -->
-	<!-- </execution> -->
-	<!-- </executions> -->
-	<!-- <configuration> -->
-	<!-- <packageName>at.sti2.msee.discovery.webservice</packageName> The name 
-		of your generated source package -->
-	<!-- <sei>at.sti2.msee.discovery.webservice.DiscoveryImpl</sei> -->
-	<!-- <genWsdl>true</genWsdl> -->
-
-	<!-- </configuration> -->
-	<!-- <dependencies> -->
-	<!-- <dependency> -->
-	<!-- <groupId>com.sun.xml.ws</groupId> -->
-	<!-- <artifactId>jaxws-tools</artifactId> -->
-	<!-- <version>2.2.5</version> -->
-	<!-- </dependency> -->
-	<!-- </dependencies> -->
-	<!-- </plugin> -->
-
-
-	<!-- </plugins> -->
-	<!-- </build> -->
-
-
-	<!-- <build> -->
-	<!-- <plugins> -->
-	<!-- <plugin> -->
-	<!-- <groupId>org.apache.axis2</groupId> -->
-	<!-- <artifactId>axis2-wsdl2code-maven-plugin</artifactId> -->
-	<!-- <version>1.4</version> -->
-	<!-- <executions> -->
-	<!-- <execution> -->
-	<!-- <goals> -->
-	<!-- <goal>wsdl2code</goal> -->
-	<!-- </goals> -->
-	<!-- <configuration> -->
-	<!-- <packageName>at.sti2.msee.discovery.core</packageName> -->
-	<!-- <wsdlFile>http://sesa.sti2.at:8080/discovery-webservice/services/discovery?wsdl</wsdlFile> -->
-	<!-- <databindingName>xmlbeans</databindingName> -->
-	<!-- </configuration> -->
-	<!-- </execution> -->
-	<!-- </executions> -->
-	<!-- </plugin> -->
-	<!-- </plugins> -->
-	<!-- </build> -->
 
 
 </project>
