--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<axis.version>1.5.4</axis.version>
 		<axis2.version>1.6.2</axis2.version>
 		<openrdf-sesame.version>2.6.5</openrdf-sesame.version>
+		<spring.version>3.0.7.RELEASE</spring.version>
 
 		<!-- Default properties -->
 		<default.port>8080</default.port>
@@ -321,7 +322,7 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
-				<version>3.0.7.RELEASE</version>
+				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.cxf</groupId>
@@ -336,7 +337,22 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
-				<version>3.0.7.RELEASE</version>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-expression</artifactId>
+				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.ws.commons.neethi</groupId>
@@ -522,6 +538,11 @@
 				<groupId>com.sun.xml.ws</groupId>
 				<artifactId>jaxws-rt</artifactId>
 				<version>2.1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>4.2.4</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
