--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -45,7 +45,7 @@
 				<exclusion>
 					<groupId>org.apache.ws.commons.schema</groupId>
 					<artifactId>XmlSchema</artifactId>
-        		</exclusion>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -55,9 +55,8 @@
 				<exclusion>
 					<groupId>org.apache.ws.commons.schema</groupId>
 					<artifactId>XmlSchema</artifactId>
-        		</exclusion>
+				</exclusion>
 			</exclusions>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -78,37 +77,29 @@
 			<artifactId>commons-httpclient</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.axis</groupId>
-			<artifactId>axis</artifactId>
-		</dependency>
-
 		<dependency><!-- for web service tests -->
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
+			<scope>test</scope>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.axis2</groupId> -->
-<!-- 			<artifactId>axis2</artifactId> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.axis2</groupId> -->
-<!-- 			<artifactId>axis2-transport-http</artifactId> -->
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.apache.ws.commons.schema</groupId> -->
-<!-- 					<artifactId>XmlSchema</artifactId> -->
-<!--         		</exclusion> -->
-<!-- 			</exclusions> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.axis2</groupId> -->
-<!-- 			<artifactId>axis2-transport-local</artifactId> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.axis2</groupId> -->
-<!-- 			<artifactId>axis2-jaxws</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.axis2</groupId> -->
+		<!-- <artifactId>axis2</artifactId> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.axis2</groupIdoupId> -->
+		<!-- <artifactId>XmlSchema</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- </exclusions> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.axis2</groupId> -->
+		<!-- <artifactId>axis2-transport-local</artifactId> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.axis2</groupId> -->
+		<!-- <artifactId>axis2-jaxws</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.apache.ws.commons.axiom</groupId>
 			<artifactId>axiom-api</artifactId>
@@ -117,7 +108,7 @@
 			<groupId>org.apache.ws.commons.axiom</groupId>
 			<artifactId>axiom-impl</artifactId>
 		</dependency>
-			
+
 		<dependency>
 			<groupId>org.apache.xmlbeans</groupId>
 			<artifactId>xmlbeans</artifactId>
@@ -144,22 +135,22 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>7.6.0.v20120127</version>
+			<version>9.0.3.v20130506</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>7.6.0.v20120127</version>
+			<version>9.0.3.v20130506</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-http</artifactId>
-			<version>7.6.0.v20120127</version>
+			<version>9.0.3.v20130506</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
-			<version>7.6.0.v20120127</version>
+			<version>9.0.3.v20130506</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
@@ -202,9 +193,9 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 		</dependency>
-		
-		
-		
+
+
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -213,20 +204,14 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-bundle</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>org.apache.ws.xmlschema</groupId>
-		    <artifactId>xmlschema-core</artifactId>
-		</dependency>
+
 		<!-- Even though this is dependency of cxf it must be added explicitly 
 			for jetty (maven problem) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-		</dependency>
+
 	</dependencies>
 
 
