--- a/discovery/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/discovery/webservice/src/main/webapp/WEB-INF/web.xml
@@ -5,28 +5,48 @@
          http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<!-- Default configuration file for CXF -->
 	<display-name>Discovery Webservice</display-name>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
-            classpath:META-INF/cxf/cxf.xml
-            classpath:META-INF/cxf/cxf-servlet.xml
-        </param-value>
-	</context-param>
+<!-- 	<listener> -->
+<!-- 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
+<!-- 	</listener> -->
+<!-- 	<context-param> -->
+<!-- 		<param-name>contextConfigLocation</param-name> -->
+<!-- 		<param-value> -->
+<!--             classpath:META-INF/cxf/cxf.xml -->
+<!--             classpath:META-INF/cxf/cxf-servlet.xml -->
+<!--         </param-value> -->
+<!-- 	</context-param> -->
+<!-- 	<servlet> -->
+<!-- 		<servlet-name>CXFServlet</servlet-name> -->
+<!-- 		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class> -->
+<!-- 		<load-on-startup>1</load-on-startup> -->
+<!-- 	</servlet> -->
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>CXFServlet</servlet-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</servlet-mapping> -->
+<!-- 	<session-config> -->
+<!-- 		<session-timeout>60</session-timeout> -->
+<!-- 	</session-config> -->
+
+
 	<servlet>
-		<servlet-name>CXFServlet</servlet-name>
-		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<servlet-name>AxisServlet</servlet-name>
+		<servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>CXFServlet</servlet-name>
+		<servlet-name>AxisServlet</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+
 	<session-config>
 		<session-timeout>60</session-timeout>
-	</session-config>
-	
+	</session-config>	
+
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+    
 </web-app>
 
