--- a/invocation/webservice/pom.xml
+++ b/invocation/webservice/pom.xml
@@ -11,33 +11,54 @@
 		<version>m17.1-SNAPSHOT</version>
 	</parent>
 
-
 	<build>
+		<finalName>invocation-webservice</finalName>
 		<plugins>
 			<plugin>
-				<!-- Generate WSDL files from annotations in the implementation -->
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-java2ws-plugin</artifactId>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2-java2wsdl-maven-plugin</artifactId>
+				<version>1.6.2</version>
 				<executions>
 					<execution>
-						<id>install</id>
-						<phase>install</phase>
-						<configuration>
-							<className>at.sti2.msee.invocation.webservice.Invocation</className>
-							<outputFile>${project.build.directory}/../src/main/resources/InvocationService.wsdl</outputFile>
-							<genWsdl>true</genWsdl>
-
-							<!-- <genClient>true</genClient> -->
-							<verbose>false</verbose>
-						</configuration>
+						<phase>process-classes</phase>
 						<goals>
-							<goal>java2ws</goal>
+							<goal>java2wsdl</goal>
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<className>at.sti2.msee.invocation.webservice.InvocationImpl</className>
+					<outputFileName>${project.build.directory}/invocation.wsdl</outputFileName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+<!-- 	<build> -->
+<!-- 		<plugins> -->
+<!-- 			<plugin> -->
+<!-- 				Generate WSDL files from annotations in the implementation -->
+<!-- 				<groupId>org.apache.cxf</groupId> -->
+<!-- 				<artifactId>cxf-java2ws-plugin</artifactId> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>install</id> -->
+<!-- 						<phase>install</phase> -->
+<!-- 						<configuration> -->
+<!-- 							<className>at.sti2.msee.invocation.webservice.Invocation</className> -->
+<!-- 							<outputFile>${project.build.directory}/../src/main/resources/InvocationService.wsdl</outputFile> -->
+<!-- 							<genWsdl>true</genWsdl> -->
+
+<!-- 							<genClient>true</genClient> -->
+<!-- 							<verbose>false</verbose> -->
+<!-- 						</configuration> -->
+<!-- 						<goals> -->
+<!-- 							<goal>java2ws</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
+<!-- 		</plugins> -->
+<!-- 	</build> -->
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
@@ -49,27 +70,87 @@
         		</exclusion>
 			</exclusions>
 		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-bundle</artifactId>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency><!-- needed for mvn build @see T111 -->
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.ws.xmlschema</groupId>
-		    <artifactId>xmlschema-core</artifactId>
-		</dependency>
-		<!-- Even though this is dependency of cxf it must be added explicitly 
-			for jetty (maven problem) -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-jaxws</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-impl</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId>
+			<artifactId>xmlbeans</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxrpc-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-discovery</groupId>
+			<artifactId>commons-discovery</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+		</dependency>
+		
+<!-- 		<dependency> -->
+<!-- 			<groupId>junit</groupId> -->
+<!-- 			<artifactId>junit</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.cxf</groupId> -->
+<!-- 			<artifactId>cxf-bundle</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>org.apache.ws.xmlschema</groupId> -->
+<!-- 		    <artifactId>xmlschema-core</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework</groupId> -->
+<!-- 			<artifactId>spring-web</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework</groupId> -->
+<!-- 			<artifactId>spring-core</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 </project>
