--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -13,7 +13,7 @@
 	<modules>
 		<module>api</module>
 		<module>core</module>
-		<module>monitoring.webservice</module>
+		<module>webservice</module>
 		<!-- <module>monitoring.jsonservice</module>		 -->
 	</modules>
 </project>
