--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -3,37 +3,78 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<packaging>jar</packaging>
+	<groupId>at.sti2.msee.delivery</groupId>
 	<artifactId>testing</artifactId>
+	<version>m17.1-SNAPSHOT</version>
 
-	<parent>
-		<groupId>at.sti2.msee.delivery</groupId>
-		<artifactId>platform</artifactId>
-		<version>m17.1-SNAPSHOT</version>
-	</parent>
+	<properties>
+		<axis2.version>1.6.2</axis2.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>registration.core</artifactId>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>discovery.core</artifactId>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2</artifactId>
+			<version>${axis2.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<version>${project.parent.version}</version>
-			<artifactId>ranking.core</artifactId>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-http</artifactId>
+			<version>${axis2.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>invocation.core</artifactId>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
+			<version>${axis2.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>monitoring.core</artifactId>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-jaxws</artifactId>
+			<version>${axis2.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-http</artifactId>
+			<version>${axis2.version}</version>
+		</dependency>
+
+
 	</dependencies>
+
+	<!-- <parent> -->
+	<!-- <groupId>at.sti2.msee.delivery</groupId> -->
+	<!-- <artifactId>platform</artifactId> -->
+	<!-- <version>m17.1-SNAPSHOT</version> -->
+	<!-- </parent> -->
+
+	<!-- <dependencies> -->
+	<!-- <dependency> -->
+	<!-- <groupId>${project.groupId}</groupId> -->
+	<!-- <artifactId>registration.core</artifactId> -->
+	<!-- </dependency> -->
+	<!-- <dependency> -->
+	<!-- <groupId>${project.groupId}</groupId> -->
+	<!-- <artifactId>discovery.core</artifactId> -->
+	<!-- </dependency> -->
+	<!-- <dependency> -->
+	<!-- <groupId>${project.groupId}</groupId> -->
+	<!-- <version>${project.parent.version}</version> -->
+	<!-- <artifactId>ranking.core</artifactId> -->
+	<!-- </dependency> -->
+	<!-- <dependency> -->
+	<!-- <groupId>${project.groupId}</groupId> -->
+	<!-- <artifactId>invocation.core</artifactId> -->
+	<!-- </dependency> -->
+	<!-- <dependency> -->
+	<!-- <groupId>${project.groupId}</groupId> -->
+	<!-- <artifactId>monitoring.core</artifactId> -->
+	<!-- </dependency> -->
+	<!-- </dependencies> -->
 
 
 
