223: Refactoring of discovery and invocation, adding of java-docs http://redmine.sesa.sti2.at/issues/show/223
cleanup of discovery

--- a/discovery/webservice/pom.xml
+++ b/discovery/webservice/pom.xml
@@ -12,6 +12,7 @@
 	</parent>
 
 	<build>
+		<finalName>discovery-webservice</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.axis2</groupId>
