223: Refactoring of discovery and invocation, adding of java-docs http://redmine.sesa.sti2.at/issues/show/223
change of web service display name

--- a/monitoring/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/monitoring/webservice/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
          http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<!-- Default configuration file for CXF -->
-	<display-name>Invocation Webservice</display-name>
+	
+	<display-name>Monitoring Webservice</display-name>
 	
 
 	<servlet>
