new configuration module with all dependencies

--- a/invocation/core/src/test/resources/default.properties
+++ b/invocation/core/src/test/resources/default.properties
@@ -1,4 +1,10 @@
 ######################################
+# Triplestore Access Information - TEST
+######################################
+repository.sesame.endpoint = ${default.sesame.endpoint}
+repository.sesame.reposid = ${default.sesame.test.repository.name}
+
+######################################
 # Triplestore Access Information
 ######################################
 invocation.sesame.endpoint = ${invocation.sesame.endpoint}
@@ -7,8 +13,6 @@ invocation.sesame.reposid = ${invocation.sesame.reposid}
 ############################
 # Invocation Information
 ###########################
-monitoring.endpoint.servicename = ${monitoring.endpoint.servicename}
-monitoring.endpoint.namespace = ${monitoring.endpoint.namespace}
 monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
 monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
 monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
