--- a/monitoring/core/src/test/resources/default.properties
+++ b/monitoring/core/src/test/resources/default.properties
@@ -1,4 +1,10 @@
 ######################################
+# Triplestore Access Information - TEST
+######################################
+repository.sesame.endpoint = ${default.sesame.endpoint}
+repository.sesame.reposid = ${default.sesame.test.repository.name}
+
+######################################
 # Triplestore Access Information
 ######################################
 invocation.sesame.endpoint = ${invocation.sesame.endpoint}
