--- a/monitoring/core/pom.xml
+++ b/monitoring/core/pom.xml
@@ -22,6 +22,10 @@
 			<artifactId>util.triplestore.client</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>util.config</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 		</dependency>
