--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,11 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>util.config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>uk.ac.open.kmi.iserve</groupId>
 				<artifactId>iserve-importer-sawsdl</artifactId>
 				<version>1.0.0-SNAPSHOT</version>
