--- a/registration/core/src/test/resources/default.properties
+++ b/registration/core/src/test/resources/default.properties
@@ -1,6 +1,24 @@
 ######################################
 # Triplestore Access Information - TEST
 ######################################
-registration.sesame.endpoint = ${registration.sesame.endpoint}
-#sesame.endpoint = http://localhost/openrdf-sesame
-registration.sesame.reposid = ${default.sesame.test.repository.name}
+repository.sesame.endpoint = ${default.sesame.endpoint}
+repository.sesame.reposid = ${default.sesame.test.repository.name}
+
+######################################
+# Triplestore Access Information
+######################################
+invocation.sesame.endpoint = ${invocation.sesame.endpoint}
+invocation.sesame.reposid = ${invocation.sesame.reposid}
+
+############################
+# Invocation Information
+###########################
+monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
+monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
+############################
+# Ranking Information
+###########################
+ranking.triplestore.endpoint = ${ranking.triplestore.endpoint}
+ranking.triplestore.reposid = ${ranking.triplestore.reposid}
+ranking.instance.prefixuri = ${ranking.instance.prefixuri}
