--- a/util/config/src/main/resources/default.properties
+++ b/util/config/src/main/resources/default.properties
@@ -1,21 +1,22 @@
 ######################################
-# Triplestore Access Information - TEST
-######################################
-repository.sesame.endpoint = ${default.sesame.endpoint}
-repository.sesame.reposid = ${default.sesame.test.repository.name}
-
-######################################
 # Triplestore Access Information
 ######################################
-invocation.sesame.endpoint = ${invocation.sesame.endpoint}
-invocation.sesame.reposid = ${invocation.sesame.reposid}
-
+repository.sesame.endpoint = ${default.sesame.endpoint}
+repository.sesame.reposid = ${default.sesame.repository.name}
 ############################
 # Invocation Information
 ###########################
+monitoring.endpoint.servicename = ${monitoring.endpoint.servicename}
+monitoring.endpoint.namespace = ${monitoring.endpoint.namespace}
 monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
-monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
+monitoring.triplestore.reposid = ${default.sesame.repository.name}
 monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
+############################
+# Ranking Information
+###########################
+ranking.triplestore.endpoint = ${ranking.triplestore.endpoint}
+ranking.triplestore.reposid = ${ranking.triplestore.reposid}
+ranking.instance.prefixuri = ${ranking.instance.prefixuri}
 ############################
 # Ranking Information
 ###########################
